# libovr_nsb

./: Makefile  Makefile.am  Makefile.clean  README  README.md  configure.ac
LibOVR/: WHY_IS_THIS_HERE
examples/: Makefile.am  Makefile.standalone  basic-v-c-uv-nolight.vert  basic-v-n-uv.vert  consoletest.c  gldemo.c  glstereo.c  glstereo.h  gltest1.c  gltools.c  gltools.h  hidapitest.c  hmd_orientation.c  ovr-distort-aa.frag  ovr-distort-no-discard.frag  ovr-distort.frag  ovr-distortchroma-aa.frag  ovr-distortchroma.frag  ovr-post.vert  rgba-modulate.frag  simplesky.frag  sky.frag  threadtest.c
gl-matrix/: Makefile.am  mat4.c  quat.c
gl_matrix/: Makefile.am  mat3.c  mat4.c  quat.c  str.c  vec3.c
libovr_nsb/: Makefile  Makefile.am  OVR.h  OVR_Defs.h  OVR_Device.h  OVR_HID.h  OVR_HID_hidapi.c  OVR_Helpers.c  OVR_Sensor.c  OVR_Sensor.h  README
libovr_nsb/gl-matrix.c/: Makefile.am  gl-matrix.h
libovr_nsb/lib/: Makefile.am  OVR_Device.h  OVR_HID.c  OVR_HID.h  OVR_HID_hidapi.c  OVR_Helpers.c  OVR_Sensor.c  OVR_Sensor.h
